# advent-of-code-public

./: .codecov.yml  .gitignore  countToRewrite.sh  dumpAdventAnswers.sh  fetchInput.sh  findDaysLongerThanMinute.sh  findYearsLongerThanMinute.sh  listNotRewritten.sh  pom.xml  printAllAdventAnswers.sh  printAnswers.sh  printSingleAdventAnswers.sh  runAll.sh  runAllAdvents.sh  runAllAdventsAndMeasureTime.sh  runAllAndDumpCalculatedAnswers.sh  runSingle.sh  runSingleNative.sh
.github/: dependabot.yaml
2015/: pom.xml  printAnswers.sh  runAll.sh
2016/: pom.xml  runAll.sh
2017/: pom.xml  printAnswers.sh  runAll.sh
2018/: pom.xml  runAll.sh
2019/: b.hs  pom.xml  runAll.sh
2020/: pom.xml  runAll.sh
2021/: pom.xml  printAnswers.sh  runAll.sh
2022/: pom.xml  printAnswers.sh  runAll.sh
2023/: pom.xml  runAll.sh  runAllNative.sh
2024/: pom.xml
2025/: pom.xml
commons/: pom.xml
day1/: day1.groovy
day10/: day10_2.groovy
day12/: day12.groovy  day12_2.groovy
rust-aoc/: Cargo.toml
rust-aoc/src/: helper.rs  main.rs  year2015.rs  year2023.rs  year2024.rs
rust-aoc/src/year2015/: day201501.rs
rust-aoc/src/year2023/: day202301.rs  day202302.rs  day202303.rs  day202304.rs
rust-aoc/src/year2024/: day202401.rs  day202402.rs  day202403.rs  day202404.rs  day202405.rs  day202406.rs  day202407.rs  day202408.rs  day202409.rs  day202410.rs  day202411.rs  day202412.rs  day202413.rs  day202414.rs  day202415.rs  day202416.rs  day202417.rs  day202418.rs  day202419.rs  day202420.rs  day202421.rs  day202422.rs  day202423.rs  day202424.rs  day202425.rs  day2024XX.rs_tmp
(+1276 files in other folders)
